# Second-Project-Real-vs-AI-Art-Classification

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 01_ai_art_detection.ipynb
outputs/metrics/: E0_mobilenetv2_noaug_frozen_history.csv  E0_mobilenetv2_noaug_frozen_result.json  E0_mobilenetv2_noaug_frozen_test_predictions.csv  E0_mobilenetv2_noaug_frozen_val_predictions.csv  E1_mobilenetv2_aug_frozen_history.csv  E1_mobilenetv2_aug_frozen_result.json  E1_mobilenetv2_aug_frozen_test_predictions.csv  E1_mobilenetv2_aug_frozen_val_predictions.csv  E2_convnext_tiny_aug_frozen_history.csv  E2_convnext_tiny_aug_frozen_result.json  E2_convnext_tiny_aug_frozen_test_predictions.csv  E2_convnext_tiny_aug_frozen_val_predictions.csv  E3_convnext_tiny_aug_laststage_history.csv  E3_convnext_tiny_aug_laststage_result.json  E3_convnext_tiny_aug_laststage_test_predictions.csv  E3_convnext_tiny_aug_laststage_val_predictions.csv  E4_convnext_tiny_se_aug_laststage_history.csv  E4_convnext_tiny_se_aug_laststage_result.json  E4_convnext_tiny_se_aug_laststage_test_predictions.csv  E4_convnext_tiny_se_aug_laststage_val_predictions.csv  run_manifest.json
outputs/models/: E0_mobilenetv2_noaug_frozen_best.pt  E1_mobilenetv2_aug_frozen_best.pt  (+3 more)
report/: references.bib  report.tex
scripts/: download_dataset.py  evaluate_replication.py  make_latex_table.py  make_robustness_examples.py  run_experiments.py
tests/: test_data.py  test_models_and_metrics.py  test_replication.py  test_report_generation.py  test_training_smoke.py
(+50 files in other folders)
