[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-art-detection"
version = "0.1.0"
description = "Binary human-art versus AI-art detection experiments"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "Pillow>=10.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "torchvision>=0.16",
]

[project.optional-dependencies]
data = [
  "kagglehub>=0.3.12",
]
dev = [
  "jupyter>=1.0",
  "nbformat>=5.9",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 92
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
